# rustlearn

./: Cargo.toml
readbook/: readme.md
readbook/grrs/: Cargo.toml  build.rs.bak
readbook/grrs/src/: cli.rs  main.rs
readbook/grrs/tests/: cli.rs
readbook/guessing_game/src/: main.rs
readbook/minigrep/: output.txt
readbook/minigrep/src/: lib.rs  main.rs
readbook/webhello/: Cargo.toml
readbook/webhello/src/: lib.rs  main.rs
uselib/mangen/: Cargo.toml  build.rs
worktoml/tomloper/: Cargo.toml
worktoml/tomloper/examples/: pathread.rs  pathread_mut.rs  pathwrite.rs
worktoml/tomloper/src/: lib.rs  tests.rs
