[package]
name = "grrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4.17"
env_logger = "0.10.0"
ctrlc = "3.2.5"
signal-hook = "0.3.15"
crossbeam-channel = "0.5.7"
serde = { version = "1.0.152", features = ["derive"] }
confy = "0.3.1"
# confy = "0.5.1"
is-terminal = "0.4.4"
exitcode = "1.1.2"

[dev-dependencies]
assert_cmd = "2.0.8"
predicates = "2.1.5"
assert_fs = "1.0.10"

[build-dependencies]
clap = { version = "4.0", features = ["derive"] }
clap_mangen = "0.2.9"
